--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide1image/1645687546/%E5%AD%B8%E7%94%9F%E7%B6%B2%E8%B7%AF%E6%9F%A5%E8%A9%A2%E6%88%90%E7%B8%BE.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="//ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide1image/1647834966/%E9%98%B2%E7%96%AB%E6%8E%AA%E6%96%BD%E6%95%99%E5%AE%A4%E7%92%B0%E5%A2%83%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A0%85.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -114,7 +114,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide2image/1645687546/%E9%98%B2%E7%96%AB%E6%8E%AA%E6%96%BD%E6%95%99%E5%AE%A4%E7%92%B0%E5%A2%83%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A0%85.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="//ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide2image/1647834966/%E6%95%99%E5%AD%B8%E4%BA%8B%E5%8B%99%E7%9B%B8%E9%97%9C%E4%BA%8B%E5%AE%9C_%E4%B8%8B.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -286,7 +286,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide11image/1645687546/%E9%99%84%E4%BB%B62-%E6%A1%91%E8%AC%9B%E5%BA%A7%E8%AA%B2%E7%A8%8B%E5%AE%A3%E5%B0%8E%E6%B5%B7%E5%A0%B1.JPG" alt=""></a></li>
+                        <li><a href="#"><img src="" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -359,7 +359,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img class="img15" src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide15image/1645687546/EPC%20iLearn%E5%AE%A3%E5%82%B3%E8%B3%87%E6%96%99.jpg" alt=""></a></li>
+                        <li><a href="#"><img class="img15" src="//ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide12image/1647834966/EPC%20iLearn%E5%AE%A3%E5%82%B3%E8%B3%87%E6%96%99.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -388,7 +388,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img class="img16" src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide16image/1645687546/%E6%9D%B1%E5%8D%97%E4%BA%9E%E8%AA%9E_Banner.jpg" alt=""></a></li>
+                        <li><a href="#"><img class="img16" src="//ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide11image/1647834966/%E6%9D%B1%E5%8D%97%E4%BA%9E%E8%AA%9E_Banner.jpg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
