fix:update script

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ilearn</title>
-    <script src="./my.js"></script>
     <link rel="stylesheet" href="./style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="./my.js"></script>
 </head>
 <body>
     <div>
@@ -101,7 +102,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="//ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide1image/1647834966/%E9%98%B2%E7%96%AB%E6%8E%AA%E6%96%BD%E6%95%99%E5%AE%A4%E7%92%B0%E5%A2%83%E6%B3%A8%E6%84%8F%E4%BA%8B%E9%A0%85.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316293.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -114,7 +115,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="//ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide2image/1647834966/%E6%95%99%E5%AD%B8%E4%BA%8B%E5%8B%99%E7%9B%B8%E9%97%9C%E4%BA%8B%E5%AE%9C_%E4%B8%8B.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316295.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -127,7 +128,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide3image/1645687546/%E6%99%BA%E6%85%A7%E8%B2%A1%E7%94%A2%E6%AC%8A%E5%AE%A3%E5%91%8A.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316296.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -150,7 +151,7 @@
                         </li>
                     </ul>
                     <ul class="bright">            
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide4image/1645687546/%E5%B8%B8%E7%94%A8%E8%AA%B2%E7%A8%8B%E8%BB%9F%E9%AB%94%E8%87%AA%E8%A1%8C%E4%B8%8B%E8%BC%89%E5%AE%89%E8%A3%9D%E4%BD%BF%E7%94%A8.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316297.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -163,7 +164,7 @@
                         </li>
                     </ul>
                     <ul class="bright">     
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide5image/1645687546/%E6%B3%A8%E6%84%8F%E6%95%99%E5%AD%B8%E5%A4%A7%E7%B6%B1%E6%8E%8C%E6%8F%A1%E5%AD%B8%E7%BF%92%E6%AD%A5%E8%AA%BF.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316298.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -176,7 +177,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide6image/1645687546/%E6%88%91%E7%9A%84%E5%BD%B1%E9%9F%B3%E6%95%99%E6%9D%90%E4%BD%9C%E6%A5%AD%E4%B8%8A%E7%B7%9A%E8%AA%AA%E6%98%8E.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316299.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -189,7 +190,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide7image/1645687546/%E7%B7%9A%E4%B8%8A%E8%AB%AE%E8%A9%A2%E6%9C%8D%E5%8B%99.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316294.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -202,7 +203,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide8image/1645687546/LearningPortfolio%E6%9C%8D%E5%8B%99%E4%B8%8B%E6%9E%B6.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316300.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -240,7 +241,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide9image/1645687546/110-2%E5%BE%AE%E5%AD%B8%E5%88%86learn.png" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316301.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -269,7 +270,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img class="img10" src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide10image/1645687546/%E6%9C%AA%E5%91%BD%E5%90%8D.png" alt=""></a></li>
+                        <li><a href="#"><img class="img10" src="./img/316304.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -286,7 +287,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316303.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -299,7 +300,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide12image/1645687546/%E6%95%99%E5%AD%B8%E4%BA%8B%E5%8B%99%E7%9B%B8%E9%97%9C%E4%BA%8B%E5%AE%9C_%E4%B8%8B.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316306.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -314,7 +315,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide13image/1645687546/%E8%B7%A8%E9%A0%98%E5%9F%9F%E5%AD%B8%E9%99%A2_ilearn%E8%AA%B2%E5%AE%A3.jpg" alt=""></a></li>
+                        <li><a href="#"><img src="./img/316307.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -336,7 +337,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img class="img14" src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide14image/1645687546/%E5%AE%A3%E5%82%B3%E6%B5%B7%E5%A0%B1.jpg" alt=""></a></li>
+                        <li><a href="#"><img class="img14" src="./img/316305.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -359,7 +360,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img class="img15" src="//ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide12image/1647834966/EPC%20iLearn%E5%AE%A3%E5%82%B3%E8%B3%87%E6%96%99.jpg" alt=""></a></li>
+                        <li><a href="#"><img class="img15" src="./img/316302.jpg" alt=""></a></li>
                     </ul>
                 </div>
                 <div class="slide">
@@ -388,7 +389,7 @@
                         </li>
                     </ul>
                     <ul class="bright">
-                        <li><a href="#"><img class="img16" src="//ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/slide11image/1647834966/%E6%9D%B1%E5%8D%97%E4%BA%9E%E8%AA%9E_Banner.jpg" alt=""></a></li>
+                        <li><a href="#"><img class="img16" src="./img/316308.jpg" alt=""></a></li>
                     </ul>
                 </div>
             </div>
@@ -509,13 +510,14 @@
                         </div>
                     </div>
                     <div class="l-i-content">
-                        <form action="https://ilearn2.fcu.edu.tw/login/index.php"> 
+                        <form method="get" action="https://ilearn2.fcu.edu.tw/">
                             <label for="username">帳號</label>
-                            <input type="text" id="username">
+                            <input type="text" name="username" id="username">
                             <label for="passward">密碼</label>
-                            <input type="password" id="passward">
+                            <input type="password" name="passward" id="passward">
                             <label><input type="checkbox">記住帳號</label>
-                            <input class="submit" type="submit" value="登入">
+                            <input class="submit" type="submit" value="登入"  onclick="login()">
+                            <script src="./my.js"></script>
                         </form>
                         <a class="l-i-footer" href="#"><img src="https://ilearn2.fcu.edu.tw/blocks/login/pix/nid.gif" alt="" width="39px"></a>
                     </div>
@@ -541,238 +543,22 @@
             </div>
         </div>
     </div>
+
     <script>
-        var num = 0;
-        var lis_input = document.querySelector('.slides').querySelectorAll('input');
-        var lis_circle = document.querySelector('.manual').querySelectorAll('label');
-        function run(){
-            auto = setInterval(autoShow,3000);
-        }
-        function stoprun(){
-            clearInterval(auto);
-        }
-        function autoShow(){
-            for(var i=0;i<lis_circle.length;i++){
-                lis_circle[i].className = 'manual-label';
-            }
-            if(num<lis_circle.length){
-                num++;
-            }else{
-                num = 0;
-            }
-            lis_circle[num].className = 'manual-label active';
-            lis_input[num].checked = true;
-        }
-        function manuShow(i){
-            if(i>=0){
-                num=i;
-                for(var i=0;i<lis_circle.length;i++){
-                    lis_circle[i].className = 'manual-label';
-                }
-                if(num<lis_circle.length-1){
-                    num++;
-                }else{
-                    num = 0;
-                }
-                lis_circle[num].className = 'manual-label active';
-                lis_input[num].checked = true;
-            }else{
-                for(var i=0;i<lis_circle.length;i++){
-                    lis_circle[i].className = 'manual-label';
-                }
-                if(num>0){
-                    num--;
-                }else{
-                    num=lis_circle.length-1;
-                }
-                lis_circle[num].className = 'manual-label active';
-                lis_input[num].checked = true;
-            }
-        }      
-        run();
 
-        var username = document.querySelector('#username');
-        var passward = document.querySelector('#passward');
-        username.onfocus = function(){
-            this.style.transition = 'box-shadow 0.2s,border-color 0.2s';
-            this.style.boxShadow = '0 0 10px -2px #99000F';
-            this.style.borderColor = '#99000F';
-        }
-        username.onblur = function(){
-            this.style.boxShadow = ''; 
-            this.style.borderColor = 'rgb(204, 204, 204)';
-        }
-        passward.onfocus = function(){
-            this.style.transition = 'box-shadow 0.2s,border-color 0.2s';
-            this.style.boxShadow = '0 0 10px -2px #99000F';
-            this.style.borderColor = '#99000F';
-        }
-        passward.onblur = function(){
-            this.style.boxShadow = ''; 
-            this.style.borderColor = 'rgb(204, 204, 204)';
-        }
-        var submit = document.querySelector('.submit');
-        submit.onmouseover = function(){
-            this.style.backgroundColor = 'green';
-        }
-        submit.onmouseout = function(){
-            this.style.backgroundColor = '';
-        }
-        var nav = document.querySelector('.nav');
-        var lis_nav = nav.children;
-        for(var i = 0; i<lis_nav.length; i++){
-            lis_nav[i].onmouseover = function(){
-                this.children[1].style.display = 'block';
-            }
-            lis_nav[i].onmouseout = function(){
-                this.children[1].style.display = 'none';
-            }
-            lis_nav[i].children[0].onmouseover = function(){
-                this.style.backgroundColor = 'white';
-                this.style.color = '#99000F';
-                var lis = this.parentNode.children[1].children;
-                for(var i=0;i<lis.length;i++){
-                    lis[i].onmouseover = function(){
-                        this.style.backgroundColor = '#943b21';
-                        this.children[0].style.color = 'white';
-                    }
-                    lis[i].onmouseout = function(){
-                        this.style.backgroundColor = 'white';
-                        this.children[0].style.color = '#943b21';
-                    }
-                }
-            }
-            lis_nav[i].children[0].onmouseout = function(){
-                this.style.backgroundColor = '#99000F';
-                this.style.color = 'white';
-            }
-        }
-        var slider = document.querySelector('.slider');
-        var prev = document.querySelector('#prev');
-        var next = document.querySelector('#next');
-        slider.onmouseover = function(){
-            prev.className = 'prev';
-            next.className = 'next';
-            stoprun();
 
-        }
-        slider.onmouseout = function(){
-            prev.className = 'prev prevbig';
-            next.className = 'next nextbig';
-            run();
-        }
-        lis_circle[0].onclick = function(){
-            stoprun();
-            manuShow(15);
-        }
-        lis_circle[1].onclick = function(){
-            stoprun();
-            manuShow(0);
-        }
-        lis_circle[2].onclick = function(){
-            stoprun();
-            manuShow(1);
-        }
-        lis_circle[3].onclick = function(){
-            stoprun();
-            manuShow(2);
-        }
-        lis_circle[4].onclick = function(){
-            stoprun();
-            manuShow(3);
-        }
-        lis_circle[5].onclick = function(){
-            stoprun();
-            manuShow(4);
-        }
-        lis_circle[6].onclick = function(){
-            stoprun();
-            manuShow(5);
-        }
-        lis_circle[7].onclick = function(){
-            stoprun();
-            manuShow(6);
-        }
-        lis_circle[8].onclick = function(){
-            stoprun();
-            manuShow(7);
-        }
-        lis_circle[9].onclick = function(){
-            stoprun();
-            manuShow(8);
-        }
-        lis_circle[10].onclick = function(){
-            stoprun();
-            manuShow(9);
-        }
-        lis_circle[11].onclick = function(){
-            stoprun();
-            manuShow(10);
-        }
-        lis_circle[12].onclick = function(){
-            stoprun();
-            manuShow(11);
-        }
-        lis_circle[13].onclick = function(){
-            stoprun();
-            manuShow(12);
-        }
-        lis_circle[14].onclick = function(){
-            stoprun();
-            manuShow(13);
-        }
-        lis_circle[15].onclick = function(){
-            stoprun();
-            manuShow(14);
-        }
-        prev.onmouseover = function(){
-            this.style.backgroundImage = 'url("./213212_f137_icon (1).png")';
-        }
-        prev.onmouseout = function(){
-            this.style.backgroundImage = 'url("./213212_f137_icon.png")';
-        }
-        next.onmouseover = function(){
-            this.style.backgroundImage = 'url("./213212_f137_icon (1) - 複製.png")';
-        }
-        next.onmouseout = function(){
-            this.style.backgroundImage = 'url("./213212_f137_icon - 複製.png")';
-        }
-        prev.onclick = function(){
-            stoprun();
-            next.style.backgroundImage = 'url("./213212_f137_icon - 複製.png")';
-            this.style.backgroundImage = 'url("./213212_f137_icon (2).png")';
-            for(var i=0;i<lis_circle.length;i++){
-                if(lis_input[i].checked){
-                i++;
-                manuShow(-i);
-                break;
-                }
-            }
-        }
-        next.onclick = function(){
-            stoprun();
-            prev.style.backgroundImage = 'url("./213212_f137_icon.png")';
-            this.style.backgroundImage = 'url("./213212_f137_icon (2) - 複製.png")';
-            for(var i=0;i<lis_circle.length;i++){
-                if(lis_input[i].checked){
-                    manuShow(i);
-                    break;
-                }
-            }
-        }
-        window.addEventListener('scroll',function(){
-            var scrollTop = 0;
-            if (document.documentElement && document.documentElement.scrollTop) {
-                scrollTop = document.documentElement.scrollTop;
-            } else if (document.body) {
-                scrollTop = document.body.scrollTop;
-            }
-            if(scrollTop){
-                document.querySelector('#navbar').className = 'navbar-active';
-            }else{
-                document.querySelector('#navbar').className = 'navbar';
-            }
-        })
+        // let start = new Date();
+        // let win = window.open('https://ilearn2.fcu.edu.tw/');
+        // login();
+        // function login() {
+        //     try {
+        //         win.origin;
+        //         setTimeout(login, 60);
+        //     } catch(err) {
+        //         console.log($('input[name="logintoken"]').val(), (new Date() - start), 'ms');
+        //         console.log('123');
+        //     }
+        // }
     </script>
 </body>
 </html>
