--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div>
         <div class="banner">
             <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                <img class="wrapper" src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/logo/1645687546/banner6.jpg">
+                <img class="wrapper" src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/logo/1681376156/banner6_%E4%BF%AE2.jpg">
             </a>
         </div>
         <div class="navbar" id="navbar">
