--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <body>
     <div>
         <div class="banner">
-            <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ">
-                <img class="wrapper" src="https://ilearn2.fcu.edu.tw/pluginfile.php/1/theme_essential/logo/1681376156/banner6_%E4%BF%AE2.jpg">
+            <a href="https://www.youtube.com/channel/UCtuv0bjkXkGjuXcZKa7g2eQ" target="_blank">
+                <img class="wrapper" src="./img/dalle.jpg" style="width: auto; height: 120px;">
             </a>
         </div>
         <div class="navbar" id="navbar">
@@ -506,7 +506,6 @@
                         <h2>登入</h2>
                         <div class="l-i-headr">
                             <i></i>
-                            <input type="image" src="https://ilearn2.fcu.edu.tw/theme/image.php/essential/core/1645687546/t/block_to_dock">
                         </div>
                     </div>
                     <div class="l-i-content">
@@ -516,10 +515,11 @@
                             <label for="passward">密碼</label>
                             <input type="password" name="passward" id="passward">
                             <label><input type="checkbox">記住帳號</label>
-                            <input class="submit" type="submit" value="登入"  onclick="login()">
+                            <input class="submit" type="submit" value="登入" onclick="login()">
                             <script src="./my.js"></script>
                         </form>
-                        <a class="l-i-footer" href="#"><img src="https://ilearn2.fcu.edu.tw/blocks/login/pix/nid.gif" alt="" width="39px"></a>
+                        <!-- <a class="l-i-footer" href="#"><img src="./img/dalle.jpg" alt="" style="width: 100%;height: 100%;object-position: center;"></a> -->
+                        <a class="l-i-footer" href="#"><div style="width: 100%;height: 100%;"></div></a>
                     </div>
                 </div>
             </div>
